# power_domain_sample

./: .gitignore  CMakeLists.txt  app.overlay  justfile  prj.conf  west.yml
boards/zvb/nucleo_u5a5zj_q/: overlay.repl  zvb.yml
src/: main.c  pm_notifier.c
